--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.8",
     "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
