--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,10 @@
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
+  
+  "devDependencies": {
+    "nth-check": ">=2.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
